# DBoW2

./: CMakeLists.txt
demo/: demo.cpp
demo/dataset/: test.txt
demo/dataset/test_set/: pointcloudtest.txt
demo/dataset/ws/: pointcloudtest.txt
include/DBoW2/: Base64.h  MapFrame.h
include/DBoW2/ws/: crypto.hpp
src/: MapFrame.cpp
